<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookedRoomList">

    <CheckBox
        android:id="@+id/checkBoxBooked"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="128dp"
        android:text="@string/checkBoxBooked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="300dp"
        android:layout_height="412dp"
        android:layout_marginTop="204dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRoomTypeRoomList"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textViewRoomTypeRoomList"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/TextView2RoomType"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/TextView2RoomType" />

        <TextView
            android:id="@+id/textViewRoomNumberRoomList"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textViewRoomNumberRoomList"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2RoomNumber"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textView2RoomNumber" />

        <TextView
            android:id="@+id/textViewAmountRoomList"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textViewAmountRoomList"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2AmountRoomList"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textView2AmountRoomList" />

        <TextView
            android:id="@+id/textViewRoomUpdate"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/textViewRoomUpdate"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonCHangeRoomList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/buttonCHangeRoomList"
            android:textAlignment="center" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRoomList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_bookedroom"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/abc_vector_test"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp" />

    <CheckBox
        android:id="@+id/checkBoxRemaining"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="128dp"
        android:text="@string/checkBoxRemaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>